[gd_scene load_steps=20 format=3 uid="uid://oq2a4voisjg1"]

[ext_resource type="Texture2D" uid="uid://dv6vdn27h5kil" path="res://assets/sprites/level_objects/spawner.png" id="1_24323"]
[ext_resource type="Shader" path="res://shaders/highlight.gdshader" id="1_fh3nh"]
[ext_resource type="Script" path="res://scripts/spawner.gd" id="1_o47cc"]
[ext_resource type="Texture2D" uid="uid://cfmpjnypd34os" path="res://assets/sprites/level_objects/spawner orb.png" id="2_x51t5"]
[ext_resource type="AudioStream" uid="uid://djv22vihe4t0" path="res://assets/sound effects/level_object_sounds/spawn_sound.wav" id="6_0gyn2"]
[ext_resource type="Texture2D" uid="uid://cm28gshhasnsg" path="res://assets/sprites/level_objects/spawner_vortex.png" id="6_2lawv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4hknq"]
size = Vector2(30, 11)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e7jpd"]
resource_local_to_scene = true
shader = ExtResource("1_fh3nh")
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/enabled = false

[sub_resource type="Gradient" id="Gradient_woodo"]
interpolation_mode = 2
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ceu8f"]
gradient = SubResource("Gradient_woodo")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.9, 0.9)

[sub_resource type="Gradient" id="Gradient_vfcl5"]
offsets = PackedFloat32Array(0, 0.26009, 1)
colors = PackedColorArray(0.427451, 0.917647, 0.839216, 0, 0.368627, 0.356863, 0.54902, 1, 0, 0.545098, 0.545098, 0.0784314)

[sub_resource type="Animation" id="Animation_2di3y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OrbSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -15)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CPUParticles2D:amount")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CPUParticles2D:color_ramp")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("Gradient_vfcl5")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("OrbSprite/PointLight2D:enabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CPUParticles2D:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("OrbSprite/PointLight2D:energy")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.2]
}

[sub_resource type="Animation" id="Animation_lchgq"]
resource_name = "deactivate_spawner"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OrbSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OrbSprite/PointLight2D:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_q6mxm"]
resource_name = "orb bounce"
length = 1.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OrbSprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -16), Vector2(0, -24)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OrbSprite/PointLight2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.2, 0.4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aml0g"]
_data = {
"RESET": SubResource("Animation_2di3y"),
"deactivate_spawner": SubResource("Animation_lchgq"),
"orb bounce": SubResource("Animation_q6mxm")
}

[sub_resource type="Curve" id="Curve_iwwos"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.500835), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Animation" id="Animation_rvwvd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.588235)]
}

[sub_resource type="Animation" id="Animation_0ovuf"]
resource_name = "rotate"
length = 2.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.588235)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x85qc"]
_data = {
"RESET": SubResource("Animation_rvwvd"),
"rotate": SubResource("Animation_0ovuf")
}

[node name="spawner" type="Area2D"]
collision_mask = 2
script = ExtResource("1_o47cc")

[node name="DetectPlayerCollider" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(0, -5.5)
shape = SubResource("RectangleShape2D_4hknq")

[node name="SpawnerSprite" type="Sprite2D" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_e7jpd")
position = Vector2(0, -16)
texture = ExtResource("1_24323")

[node name="OrbSprite" type="Sprite2D" parent="."]
position = Vector2(0, -15)
texture = ExtResource("2_x51t5")

[node name="PointLight2D" type="PointLight2D" parent="OrbSprite"]
z_index = 1
position = Vector2(0, -1)
color = Color(0.427451, 0.917647, 0.839216, 1)
energy = 0.2
texture = SubResource("GradientTexture2D_ceu8f")

[node name="OrbAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_aml0g")
}
autoplay = "orb bounce"

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(0, -11)
amount = 10
speed_scale = 0.3
explosiveness = 0.15
randomness = 0.1
emission_shape = 1
emission_sphere_radius = 8.0
gravity = Vector2(0, -30)
initial_velocity_max = 10.0
angular_velocity_min = -2.0
angular_velocity_max = 2.0
orbit_velocity_min = -0.5
orbit_velocity_max = 0.5
radial_accel_min = -20.0
scale_amount_min = 2.0
scale_amount_max = 2.5
scale_amount_curve = SubResource("Curve_iwwos")
color_ramp = SubResource("Gradient_vfcl5")

[node name="SpawnWaitTimer" type="Timer" parent="."]

[node name="SpawnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_0gyn2")
volume_db = -10.0
bus = &"SFX"

[node name="VortexSprite" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.588235)
texture = ExtResource("6_2lawv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="VortexSprite"]
libraries = {
"": SubResource("AnimationLibrary_x85qc")
}
autoplay = "rotate"

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="timeout" from="SpawnWaitTimer" to="." method="_on_spawn_wait_timer_timeout"]
